--- a/platformio.ini
+++ b/platformio.ini
@@ -23,11 +23,14 @@ default_envs = SK6812_RGBW_COLD, SK6812_RGBW_NEUTRAL, WS281x_RGB, SPI_APA102_SK9
 [env]
 framework = arduino
 extra_scripts = pre:extra_script.py
-build_flags = -DSERIALCOM_SPEED=2000000
+build_flags = -DSERIALCOM_SPEED=4000000
 
 ;==========================================================
 ; ESP32 board
 ;==========================================================
+[env:SK6812_RGBW_COLD]
+build_flags = ... ${env.build_flags} -DSECOND_SEGMENT_START_INDEX=170 -DSECOND_SEGMENT_DATA_PIN=4 -DSECOND_SEGMENT_REVERSED
+
 [esp32]
 platform = espressif32@6.0.0
 lib_deps = https://github.com/awawa-dev/NeoPixelBus.git#HyperSerialESP32
